# yigebar

./: .clang-format  .editorconfig  CMakeLists.txt  config.yml
debian/: changelog  control  copyright  rules
include/: Atoms.h  Bridge.h  Callback.h  Module.h  ModuleLoader.h  Painter.h  X11.h  YigeBar.h
modules/text/: Text.cc  Text.h  main.cc
modules/time/: Time.cc  Time.h  main.cc
src/: Atoms.cc  Bridge.cc  Callback.cc  ModuleLoader.cc  Painter.cc  X11.cc  YigeBar.cc  main.cc
